@@ -475,7 +475,7 @@ sharing the same job name and user have terminated.
 .RE
 
 .TP
-\fB\-D\fR, \fB\-\-workdir\fR=<\fIdirectory\fR>
+\fB\-D\fR, \fB\-\-chdir\fR=<\fIdirectory\fR>
 Set the working directory of the batch script to \fIdirectory\fR before
 it is executed. The path can be specified as full path or relative path
 to the directory where the command is executed.
